src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */

@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap');

:root {
  --ifm-color-primary: #ff8114;
  --ifm-color-primary-dark: #ea6b00;
  --ifm-color-primary-darker: #ce5d00;
  --ifm-color-primary-darkest: #ac4c00;
  --ifm-color-primary-light: #ff9e51;
  --ifm-color-primary-lighter: #ffc79e;
  --ifm-color-primary-lightest: #ffdec9;
  --ifm-code-font-size: 95%;
  --ifm-navbar-background-color: #0e1f3b;
  --ifm-footer-background-color: #142d57;
  --ifm-font-family-base: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif,
    BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
    'Segoe UI Symbol';
  --ifm-heading-font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans,
    sans-serif, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
    'Segoe UI Symbol';
  --doc-sidebar-width: 350px;
  letter-spacing: -0.02rem;
}

.docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.1);
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
}

html[data-theme='dark'] .docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.3);
}

.section-title.theme-doc-sidebar-item-category-level-1 .menu__list-item-collapsible {
  text-transform: uppercase;
  font-size: 0.75rem;
  margin: 36px auto 16px 0;
  letter-spacing: 0.05rem;
  color: var(--ifm-font-color-base);
}

.theme-doc-sidebar-item-category-level-2 .menu__list-item-collapsible {
  text-transform: none !important;
  font-size: 0.875rem !important;
  margin: 8px auto 0 0 !important;
  letter-spacing: 0rem !important;
  color: var(--ifm-font-color-base);
}

.section-title .menu__list-item-collapsible:hover {
  background: none;
}

.menu__list-item {
  font-size: 0.875rem;
  margin: 8px auto 8px 0;
}

.theme-doc-sidebar-item-link.theme-doc-sidebar-item-link-level-3 a {
  color: #666;
}

.theme-doc-sidebar-item-category.theme-doc-sidebar-item-category-level-2 ul.menu__list {
  border-left: 1px solid #ccc;
  padding-left: 0px;
  margin-left: 16px;
  margin-bottom: 24px;
}

.navbar__logo {
  height: 1.6rem;
}

.menu__link {
  line-height: 1.38;
  color: var(--ifm-font-color-base);
}

.section-title .menu__list-item-collapsible .menu__link {
  line-height: 1.5;
  color: var(--ifm-color-primary-dark);
}

.theme-doc-sidebar-item-category .theme-doc-sidebar-item-category-level-2 .menu__list-item-collapsible .menu__link {
  line-height: 1.38;
  color: var(--ifm-font-color-base);
}

.navbar__items--right .navbar__link {
  color: #ccc;
}

.content-ref-card {
  padding: 16px 24px;
  position: relative;
  display: flex;
  flex-direction: row;
  justify-content: left;
  align-items: center;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
  margin-bottom: 36px;
  vertical-align: middle;
  font-weight: 700;
  border-radius: 5px;
  transition: all 0.3s ease-in-out;
}

.content-ref-card:hover {
  text-decoration: none;
}

.content-ref-card::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
  opacity: 0;
  border-radius: 5px;
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
  transition: opacity 0.3s ease-in-out;
}

.content-ref-card:hover::after {
  opacity: 1;
}

.content-ref-card .file-icon {
  max-width: 48px;
  margin-right: 16px;
}

/* oembed */
iframe[src*='youtube.com'] {
  width: 600px !important;
  height: 400px !important;
}

@media (max-width: 550px) {
  iframe[src*='youtube.com'] {
    width: 300px !important;
    height: 200px !important;
  }
}

/* Link Card */
.rlc-container {
  width: 100%;
  max-width: 800px;
  max-height: 120px;
  margin: 0 auto 2rem;

  color: black;
  text-decoration: none;

  border: 1px solid black;
  border-radius: 0.25rem;
  display: flex;
  align-items: stretch;

  transition: background 200ms ease-in-out 0s, box-shadow 200ms ease-in-out 0s;
}

.rlc-container:hover {
  background-color: rgba(80, 80, 80, 0.1);
  box-shadow: 0 4px 5px 2px rgba(80, 80, 80, 0.2);
}

.rlc-info {
  overflow: hidden;
  padding: 0.5rem;
  flex: 4 1 100px;
  text-align: left;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.rlc-title {
  font-size: 1.25rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.rlc-description {
  font-size: 0.875rem;
  color: #333;
  overflow: hidden;
  line-height: 1rem;
  height: 2rem;
}

.rlc-url-container {
  display: flex;
  align-items: center;
}

.rlc-favicon {
  margin-right: 4px;
  width: 16px;
  height: 16px;
}

.rlc-url {
  font-size: 1rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.rlc-image-container {
  position: relative;
  flex: 1 1 100px;
}

.rlc-image {
  object-fit: cover;
  width: 100%;
  height: 100%;
  border-bottom-right-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.footer {
  background-color: #142d57;
}

